tests/neg/named-tuples-3.scala
def f: NamedTuple.NamedTuple[(Int, Any), (Int, String)] = ???

type Person = (name: Int, age: String)

val p: Person = f  // error
